# VLLM_HPT_Merged

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
src/vllm_hpt/: cli.py  config.py  visualization.py
src/vllm_hpt/dashboard/: __init__.py  server.py  state.py
src/vllm_hpt/dashboard/static/: evaluate.html  index.html
src/vllm_hpt/evaluation/: answer_parser.py  evaluator.py
src/vllm_hpt/exam/: loader.py  sampler.py
src/vllm_hpt/model/: client.py  exam_agent.py
src/vllm_hpt/orchestrator/: checkpoint.py  runner.py
src/vllm_hpt/tuning/: history.py  params.py  tuner_agent.py
src/vllm_hpt/tuning/strategies/: __init__.py  base.py  cmaes.py  gp.py  grid.py  tpe.py
src/vllm_hpt/utils/: cache.py  logger.py
tests/: test_answer_parser.py  test_cache.py  test_checkpoint.py  test_evaluator.py  test_history.py  test_integration.py  test_loader.py  test_params.py  test_sampler.py  test_strategies.py
